--- a/zeros_certifies_stage.tex
+++ b/zeros_certifies_stage.tex
@@ -12,6 +12,7 @@
 \textheight24cm
 \topmargin-2cm
 
+
 \title{Zéros certifiés des fonctions D-finies}
 \author{Mathis Deronzier}
 \date{}
@@ -23,6 +24,7 @@
 	\newpage
 	\tableofcontents
 	\newpage
+	
 	
 	\section{Introduction}
 	\newtheorem{theorem}{Théorème}[section] 
@@ -36,7 +38,7 @@
 	Le problème que nous cherchons à résoudre est le suivant, nous avons une fonction D-finie donnée par son équation différentielle et ses conditions initiales et nous allons chercher à trouver tous les zéros de cette fonction sur un segment $[a,b]$ tel que la fonction ne contient aucune singularité sur ce segment. \\
 	Premièrement, les fonctions D-finies ont été définies sur le corps $\mathbb{C}$ initialement, cependant notre problème se concentre sur les zéros sur $\mathbb{R}$, la fonction est donc $f: \mathbb{R} \rightarrow \mathbb{R}$.
 	Ensuite, le nombre de zéros d'une fonction analytique est borné sur un compact, alors on cherchera bien un nombre fini de zéros.
-	Et finalement qu'est-ce que veut dire que trouver un zéro sur un ordinateur? La nature même de la représentation des nombres sur ordinateur ne permet de manipuler que des nombres rationnels, alors il est évident que l'on ne pourra pas trouver tous les zéros des fonctions. On ne manipulera pas ici d'expression symbolique sur ordinateur. Alors, il faut signifier ce que veut dire "trouver un zéro".
+	Et finalement qu'est-ce que veut dire que trouver un zéro sur un ordinateur? La nature même de la représentation des nombres sur ordinateur ne permet de manipuler que des nombres rationnels, alors il est évident que l'on ne pourra pas trouver tous les zéros exactes des fonctions. On ne manipulera pas ici d'expression symbolique sur ordinateur. Alors, il faudra signifier ce que veut dire "trouver un zéro".
 	
 	\subsubsection{Plan}
 	
@@ -163,7 +165,7 @@
 		
 		(d)$\frac{d(x_0,x_1)}{1+\lambda} \leq d(x_0,x) \leq \frac{d(x_0,x_1)}{1-\lambda}$.
 	\end{theorem}
-	Ce théorème est bien utile, la dernière inégalité permet d'encadrer la distance au zéro, bien utile pour trouver un zéro à une précision $epsilon$. 
+	Ce théorème est bien utile, la dernière inégalité permet d'encadrer la distance au zéro, bien utile pour trouver un zéro à une précision $\epsilon$. 
 	
 	\subsection{Comment vérifier les hypothèses de contraction} 
 	
@@ -226,11 +228,10 @@
 		De plus, la suite de Newton $x_{k+1}=N_{f}(x_{k}),$ $x_{0}=x$, est définie et converge vers $\zeta$.
 	\end{corollaire}
 	\noindent \textbf{Esquisse de démonstration} $2-\sqrt2/2$ est le maximum de $(1+\alpha-\sqrt{(1+\alpha)^{2}-8\alpha})/4$ lorsque $\alpha \in [0,3-2\sqrt2]$.
-	
-	(À compléter)
-	\noindent Opérateur $\gamma(f,x)$
-	
-	Ce sera ce dernier théorème qui nous permettra de vérifier si nous avons bien un zéro. Cependant le calcul de $\gamma$ et donc de $\alpha$ est encore difficile pour des coefficients de fonction D-finies vérifiant une récurrence polynomiale. Le chapitre sur les séries majorantes fournie une majoration du coefficient $\alpha$
+	\\
+	(À compléter)\\
+	\\
+    Cependant le calcul de $\gamma$ et donc de $\alpha$ est encore difficile pour des coefficients de fonction D-finies vérifiant une récurrence polynomiale. Le chapitre sur les séries majorantes fournie une majoration du coefficient $\alpha$
 	
 	
 	
@@ -256,12 +257,11 @@
 	\[b_{s}(n)u_{n+s}+b_{s-1}(n)u_{n+s-1}+...+b_{s'}(n)u_{n+s'}=0  \tag{*}\]
 	(où s' peut être négatif) ont des comportements asymptotiques de la forme
 	\[\forall k, \hspace{2mm} b_{k}(n) \sim c_{k}n^{d_{k}} \hspace{2mm} \text{quand } n \rightarrow \infty\]
-	avec $c_{k} \in E$ et $d_{k} \in \mathbb{Z}$. Supposons de plus que $u_{n}$ est une solution de la forme  
+	avec $c_{k} \in E$ et $d_{k} \in \mathbb{Z}$. Supposons de plus que $u_{n}$ est une solution telle que  
 	\[\frac{u_{n+1}}{u_{n}}\sim \lambda n^{\kappa} \hspace{2mm} \text{quand}n \rightarrow \infty\]
 	
 	\noindent En réécrivant l'équation séquencielle avec ses coefficients asymptotiques $n \rightarrow \infty$
 	\[c_{s}\lambda^{s} n^{d_{s}+s\kappa}+c_{s-1}u_{n}\lambda^{s-1} n^{d_{s-1}+(s-1)\kappa}+...+c_{s'}\lambda^{s'} n^{d_{s'}+s'\kappa}u_{n}\]
-	
 	pour que cette expression s'annule, il est nécessaire que les termes asymptotiquement dominants se compensent, et donc que l'exposant $d_{k}+k\kappa$ le plus grand soit atteint au moins deux fois. Alors $-\kappa$ doit être parmi les pentes du \textit{polygone de newton} de l'équation.
 	
 	
@@ -275,24 +275,20 @@
 	\begin{theorem} (Perron-Kreuser)
 		Pour toute arête E du polygone de Newton de la récurrence (*) notons $\lambda_{E_{1}},\lambda{E_{2}},...$ les racines de $\chi(E)$ comptées avec leur multiplicité.
 		
-		(a) supposons que pour toute arête E, les modules $|\lambda_{E_{i}}|$ des racines de $\chi(E)$ sont deux à deux distincts. Alors toute solution non ultimement nulle de (*) satisfait
+		(a) Supposons que pour toute arête E, les modules $|\lambda_{E_{i}}|$ des racines de $\chi(E)$ sont deux à deux distincts. Alors toute solution non ultimement nulle de (*) satisfait
 		\[\frac{u_{n+1}}{u_{n}}\sim \lambda_{E_{i}}n^{\kappa(E)} \hspace{2mm} \text{quand } n \rightarrow \infty\]
 		Pour une certaine arête E et un certain i.
 		
-		(b)Si en outre (*) est réversible, elle admet une base de solution 
+		(b) Si en outre (*) est réversible, elle admet une base de solution 
 		\[(u_{n}^{[E_{i}]})_{E_{i}\leq i \leq deg \chi_{E}}\]
 		telle que 
 		\[\frac{u_{n+1}^{[E_{i}]}}{u_{n}^{[E_{i}]}}\sim \lambda n^{\kappa(E)} \hspace{2mm} \text{quand } n \rightarrow \infty\]
 		
-		(c)Dans le cas où il existe E et $i \neq j$ tels que $|\lambda_{E_{i}}|=|\lambda_{E_{j}}|$ les analogues des deux assertions précédentes subsistent mais avec la conclusion plus faible
-		\[\limsup_{n \rightarrow \infty } \big|\frac{u_{n}^{E_{i}}}{n!^{\kappa(E)}}\big|^{\frac{1}{n}}=|\lambda_{E_{i}}|\]
+		(c) Dans le cas où il existe E et $i \neq j$ tels que $|\lambda_{E_{i}}|=|\lambda_{E_{j}}|$ les analogues des deux assertions précédentes subsistent mais avec la conclusion plus faible
+		\[\limsup_{n \rightarrow \infty } \big|\frac{u_{n}^{E_{i}}}{n!^{\kappa(E)}}\big|^{\frac{1}{n}}=|\lambda_{E_{i}}|\].
 	\end{theorem}
-	
+	\vspace{7mm}
 	Certains résultats sont plus précis dans des cas particuliers et Schäfke et Noble donnent alors une discussion plus précise.
-	
-	\subsection{Esquisse de l'algorithme}
-	
-	On commence par étudier le polygone de Newton de la récurrence et les équations caractéristiques de la récurrence, pour délimiter à l'aide du théorème de Perron-Kreuser les comportements asymptotiques possibles de $u_{n}$.
 	
 	\subsection{Pôles et singularités dominantes}
 	
@@ -303,7 +299,7 @@
 	
 	\subsection{Croissance générique des solutions}
 	
-	\begin{definition} Soit $R \in \mathbb{R}[n]\big< S\big>$ unn opérateur réversible non singulier, d'ordre s. Une solution $(u_{n})$ de la récurrence R.u=0 est alors déterminée de façon unique par ses s premières valeurs. Nous dirons qu'une proposition est vrai pour une solution générique si elle est satisfaite pour $(u_{0},u_{1},...,u_{s-1}) \in \mathbb{R}^{s}/V$ où V est un sous-espace strict de $\mathbb{R}^{s}$
+	\begin{definition} Soit $R \in \mathbb{R}[n]\big< S\big>$ unn opérateur réversible non singulier, d'ordre s. Une solution $(u_{n})$ de la récurrence R.u=0 est alors déterminée de façon unique par ses s premières valeurs. Nous dirons qu'une proposition est vrai pour une solution générique si elle est satisfaite pour $(u_{0},u_{1},...,u_{s-1}) \in \mathbb{R}^{s}/V$ où V est un sous-espace strict de $\mathbb{R}^{s}$.
 		
 	\end{definition}
 	
@@ -328,8 +324,7 @@
 	\end{algorithm}
 	
 	\noindent D'après le théorème de Perron-kreuser les solutions dont "la croissance est la plus rapide", c'est à dire celle dont le coeffficient $\kappa$ est le plus grand est celle la plus à droite du polygone de Newton, et dont la racine est celle de module maximal dans son équation caractéristique.
-	
-	l'algorithme renvoie le $\kappa$ maximal et le polynôme réciproque de l'équation caractéristique correspondante au coefficient $\kappa$.
+	L'algorithme renvoie le $\kappa$ maximal et le polynôme réciproque de l'équation caractéristique correspondante au coefficient $\kappa$.
 	
 	\begin{proposition} Posons $R=\sum_{k=0}^{s} b^{[k]}(n)S^{k} \hspace{4mm} \in \mathbb{Q}[n]\big<S\big>$ et supposons que R n'est pas réduit à un terme $b^{[s]}S^{k}$. On a donc
 		\[\limsup_{n \rightarrow \infty }\Big|\frac{u_{n}}{n!^{k}}\Big|^{\frac{1}{n}} \hspace{4mm} \text{où } \alpha=\frac{1}{\delta(P_{\alpha})}\]
@@ -337,11 +332,11 @@
 	\end{proposition}
 	\textbf{Esquisse de démonstration}
 	Le polygone de Newton étant convexe, le coefficient $\kappa$ le plus élevé correspond à un segment relié au sommet le plus à droite du polygone.\\
-	Aussi, en écrivant prenant le polynôme caractéristique correspondant, le dérivant par $\lambda^{s}$ et en posant $\beta=\frac{1}{\lambda}$ le polynôme en $\beta$ est le même que celui renvoyé par l'algorithme \textit{asympt}. Pour ce qui est du rayon de l'inégalité, elle résulte du (c) du théorème de Perron-Kreuser.
-	Il reste à démontrer l'inégalité pour des conditions initiales génériques. Soit $V=ker$ $R \subset \mathbb{Q}^{\mathbb{N}}$, d'après le théorème (vrai?????)\\
+	Aussi, en écrivant prenant le polynôme caractéristique correspondant, le dérivant par $\lambda^{s}$ et en posant $\beta=\frac{1}{\lambda}$ le polynôme en $\beta$ est le même que celui renvoyé par l'algorithme \textit{Asympt}. Pour ce qui est du rayon de l'inégalité, elle résulte du (c) du théorème de Perron-Kreuser.
+	Il reste à démontrer l'inégalité pour des conditions initiales génériques. Soit $V=ker$ $R \subset \mathbb{Q}^{\mathbb{N}}$, d'après le théorème de Perron Kreuser.\\
 	Il existe une solution $u^{[0]}$ telle que $\limsup \big|u^{[0]}_{n}/n!^{k}\big|^{1/n}=\alpha$.\\
 	Étendons cette solution en une base $(u^{[0]},u^{[1]},..,u^{[s-1]})$ de V. Soit $u=\sum_{k}\lambda^{[k]}u^{[k]}$
-	Par construction de $\kappa$ et $\alpha$, on a $\limsup \big|u_{n}/n!^{\kappa}\big|^{1/n} \leq \alpha$. Quitte à extraire des sous-suites pour $u_{n}$ on peut supposer que $u^{[0]}_{n}$ n'est jamais nul,il existe donc $\beta$ tel que
+	Par construction de $\kappa$ et $\alpha$, on a $\limsup \big|u_{n}/n!^{\kappa}\big|^{1/n} \leq \alpha$. Quitte à extraire des sous-suites pour $u_{n}$ on peut supposer que $u^{[0]}_{n}$ n'est jamais nul, il existe donc $\beta$ tel que
 	\[\Big|\lambda^{[0]}+\frac{\lambda^{[1]}u^{[1]}_{n}+...+\lambda^{[s-1]}u^{[s-1]}_{n}}{u^{[0]}_{n}}\Big| \rightarrow_{n \rightarrow \infty} \frac{\beta}{\alpha}\] 
 	et $\beta=\alpha$ à moins que 
 	\[\frac{\lambda^{[1]}u^{[1]}_{n}+...+\lambda^{[s-1]}u^{[s-1]}_{n}}{u^{[0]}_{n}}\rightarrow_{n \rightarrow \infty}-\lambda^{[0]}\]
@@ -365,7 +360,7 @@
 		
 		\begin{algorithmic}[1]
 			\vspace{3mm}
-			\STATE g:=pgcd$(b^{[s]},\pi)$ où $\pi=\prod_{k=1}^{s}(n+k)$
+			\STATE g:=pgcd$(b^{[s]},\pi)$, où $\pi=\prod_{k=1}^{s}(n+k)$
 			\vspace{3mm}
 			\STATE calculer les $c_{jk}$ tels que $g.R=\sum_{k=0}^{s}\sum_{j}c_{jk}n^{j}S^{k}$\\
 			\vspace{3mm}
@@ -375,10 +370,9 @@
 			\vspace{3mm}
 			\STATE renvoyer D
 		\end{algorithmic}
-		
 	\end{algorithm}
-	La multiplication par g s'assure que les premier termes $u_{0},...,u_{s-1}$
-	s'affranchissent des potentielles contraintes crées par les termes indéxés sur les coefficients négatifs. Mais ne change pas la relation pour les termes supérieurs à s.
+	\noindent La multiplication par g assure que les premier termes $u_{0},...,u_{s-1}$
+	s'affranchissent des potentielles contraintes crées par les termes indéxés sur les coefficients négatifs. Mais elle ne change pas la relation pour les termes supérieurs à s.
 	
 	Considérons $R \in \mathbb{Q}[n]\big< S\big>$ un opérateur non singulier, d'ordre s. Une solution $(u_{n})$ de la récurrence R.u=0, u(z) est annulée par l'opérateur RecToDiffeq$(R)(\theta)=\sum_{k=0}^{r}a^{[k]}\theta^{k} \in \mathbb{Q}[z]\big< \theta\big>$. En divisant par $a^{[r]}$ on obtient
 	\begin{equation}
@@ -388,9 +382,11 @@
 	
 	\begin{proposition}Si l'opérateur R est normalisé, alors l'origine est un point régulier de D=RecToDiffeq et l'équation caractéristique dominante de $R$ est le polynôme réciproque de $a^{[r]}$ 
 	\end{proposition}
+	On peut retrouver la démonstration dans la thèse de Marc Mezzarobba.\\
 	
 	Dans le cas général, on commence par normaliser R.
 	Le produit symétrique n'est pas quelconque, regarder Barkatou et al.
+	\newpage
 	\begin{algorithm}
 		\caption{Normalize$(R,\kappa)$}
 		
@@ -410,16 +406,15 @@
 			\vspace{4mm}
 			\STATE renvoyer RecToDiffeq($\hat{R}$)
 		\end{algorithmic}
-		
 	\end{algorithm}
-	
-	
-	\begin{proposition}Soit $R \in \mathbb{Q}[n]\big< S\big>$ un opérateur non singulier, réversible de coefficient constant par rapport à S non nul. Soient $p/q, P_{\alpha}$ le comportement asymptotique génériquee renvoyé par $Asympt$. On suppose que $\delta(P_{\alpha})<\infty$ alors $Normalize(R,p/q)$ calcule un opérateur différentiel D qui annule la série 
+
+	\begin{proposition}Soit $R \in \mathbb{Q}[n]\big< S\big>$ un opérateur non singulier, réversible de coefficient constant par rapport à S non nul. Soient $p/q, P_{\alpha}$ le comportement asymptotique générique renvoyé par $Asympt$. On suppose que $\delta(P_{\alpha})<\infty$ alors $Normalize(R,p/q)$ calcule un opérateur différentiel D qui annule la série 
 		\[u(x)=\sum_{n=0}^{\infty} \psi_{n}u_{n}x^{n}\]
 		pour toutes suites $\psi$ et $u$ solutions de
 		\[(n+q)^{p}\psi_{n+q}=\psi_{n}\]
 		et $R.u=0$, l'opérateur D est régulier à l'origine et le module de sa singularité dominante est égale à $\delta(P_{\alpha})$.
 	\end{proposition}
+	La démonstration de cette proposition est faite dans la thèse de Marc Mezzarobba, mais il est évident que cette série vérifie une équation de récurrence normalisée, c'est l'objectif de la multiplication par $\psi_n$.
 	
 	\subsection{Séries majorantes}
 	
@@ -449,7 +444,7 @@
 	On a $v=v_{0}(1-z\rho^{-1})^{-M\rho}$. Si $|u_{0}| \leq v_{0}$ la récurrence permet de conclure $ u\unlhd v$. On sait que le rayon de convergence de $v$ est $\rho$ donc celui de $u$ est supérieur à $\rho$, la condition $u'(z)=a(z)u(z)$ permet de conclure l'égalité.
 	
 	\subsection{Séries majorantes pour les fonctions D-finies}
-	Dans l'example que nous avons vu précèdement, les séries majorantes servent à majorer des fonctions, elle sont utilisées sur les restes des séries pour connaître la précision de l'approximation de la fonction étudiée.
+	Dans l'exemple que nous avons vu précèdement, les séries majorantes servent à majorer des fonctions, elle sont utilisées sur les restes des séries pour connaître la précision de l'approximation de la fonction étudiée.
 	Le cas qui pourrait paraître singulier de l'équation différentielle normalisée est en fait le plus courant puisqu'il correspond au cas où l'on est à distance finie non nulle de la singularité la plus proche.
 	
 	\subsubsection{restes et résidus}
@@ -509,13 +504,13 @@
 	\end{equation}
 	Où c est un nombre complex. Il faut maintenant choisir les paramètres $\hat{a}$, $\hat{q}$ et c de sorte à ce que les inégalités ~\eqref{maj1},~\eqref{maj2},~\eqref{maj3} soient respectées. On aura alors une série majorante de $R_u^{N}$.
 	
-	\subsubsection{Séries majorantes dans le cas particulier réel}
+	\subsubsection{Séries majorantes dans le cas particulier réel sans singularité}
 	
 	Dans ce chapitre on se trouve dans le cas particulier de notre problème, nous sommes sur un intervalle $[a,b]$ tel qu'il n'y ait aucune singularité sur cet intervalle. Ce qui signifie vis à vis de l'équation différentielle
 	\[P(z,\theta) \cdot u(z)=\big[\theta^{r}p_r(z)+\theta^{r-1}p_{r-1}(z)+...+p_0(z)\big]\cdot u(z)=0 \tag{*}\]
 	où les polynômes sont premiers entre eux, que le polynôme $p_r$ ne s'annulle pas sur l'intervalle.\\
 	
-	Plusieurs familles de fonctions majorantes existent, mais ici ceux sont les  fonctions majorantes de la forme $\frac{A}{(1-\alpha z)^\lambda}$ qui sont utilisées pour majorer le reste. Remarquons que $\alpha$ doit vérifier que $\frac{1}{\alpha}$ est supérieure à la distance à la singularité la plus proche de f. C'est aussi égale à $\delta(p_r)$ introduit en section 4.
+	Plusieurs familles de fonctions majorantes existent, mais ici ce sont les  fonctions majorantes de la forme $\frac{A}{(1-\alpha z)^\lambda}$ qui sont utilisées pour majorer le reste. Remarquons que $\alpha$ doit vérifier que $\frac{1}{\alpha}$ est supérieure à la distance à la singularité la plus proche de f. C'est aussi égale à $\delta(p_r)$ introduit en section 4.
 	Ce chapitre est une explication plus en détails de la méthode de majoration utilisée. Tout d'abord il faut se munir du théorème suivant
 	
 	\begin{theorem}
@@ -542,64 +537,28 @@
 	\[A=\max_{0\leq i\leq r-1}\Big(\frac{v^{(i)}(0)}{f^{(i)}(0)}\Big),\]
 	on a
 	\[f(z)\unlhd  \frac{A}{(1-\alpha z)^\lambda}\]
+	Il n'est pas toujours possible de trouver $\lambda$, mais on peut l'approcher aussi près que l'on veut. 
+	\vspace{3mm}
 	
-	Il n'est pas toujours possible de trouver $\lambda$, mais on peut l'approcher aussi près que l'on veut. Dans la suite, on considérera qu'on a la valeur exacte de $\lambda$ pour simplifier les arguments.
-	
-	Si l'on veut trouver une série majorante de $\frac{P(z)}{Q(z)}$ de la forme $M=\frac{1}{(1-\alpha)^m}$ on cherchera 
+	\noindent Si l'on veut trouver une série majorante de $\frac{P(z)}{Q(z)}$ de la forme $M=\frac{1}{(1-\alpha)^m}$ on cherchera 
 	\[P(z)\unlhd \frac{M_0}{(1-\alpha)^{m/2}}\]
 	et 
 	\[\frac{1}{Q(z)}\unlhd \frac{M_1}{(1-\alpha)^{m/2}}\]
 	donc 
-	\[\frac{P(z)}{Q(z)}\unlhd \frac{M_0M_1}{(1-\alpha z)^{m}}\]
-	Nous n'irons pas plus loins dans l'explication de l'obtention des bornes, mais la démonstration est détaillée dans le rapport de Thomas Grégoire
-	
-	Les coefficients $M_0$ et $M_1$ vérifient:
-	
-	
-	
-	
-	\subsection{Étude de la fonction de majoration et détermination d'un majorant de alpha}
-	La fonction de majoration renvoyée est donc de la  forme
-	\[g(z)=\frac{A}{(1-\alpha z)^{\lambda}}\]
-	
-	\noindent L'objectif ici est de borner le coefficient $\gamma(f,z)=\sup_{k \geq 2} \left\|f'(z)^{-1}\frac{f^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}$ en utilisant la fonction majorante développée dans la partie précèdente. Elle respecte la propriété interessante $f\unlhd g$ et donc trouver $\alpha(g,z)$ sur cette fonction reviendrai à majorer $\alpha(f,z)$. L'objectif serait de trouver N à partir duquel $\left\|g'(z)^{-1}\frac{g^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}$ est décroissante. Alors 
-	\[\gamma(g,z)=max_{k=2}^{N}\left\|g'(z)^{-1}\frac{g^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}\] 
-	
-	\begin{proposition} Dans le cas $T=0$ on a \[\gamma(g,z)=max_{k=2}^{\lambda}\left\|g'(z)^{-1}\frac{g^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}\]
-	\end{proposition}
-
-	\begin{demonstration}
-	\noindent En étudiant l'expression de la fonction de majoration pour $T=0$ on obtient
-	\[g^{(k)}(z)=\frac{A\alpha^{k}\prod_{i=0}^{k-1}(K+i)}{(1-\alpha z)^{K+k}}\]
-	On peut écrire,
-	\[\frac{g^{(k)}(z)}{k!}=\frac{A\alpha^{k}}{(1-\alpha z)^{K+k}} \frac{\prod_{i=1}^{K-1}(k+i)}{(K-1)!} \]
-	On a finalement, pour $z < \alpha$ 
-	\[\left\|g'(z)^{-1}\frac{g^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}= \frac{\alpha}{1-\alpha z} \left\|\frac{\prod_{i=1}^{K-1}(k+i)}{K!}\right\|^{\frac{1}{k-1}} \tag{*}\]
-	Considérons cette expression comme une fonction de $\mathbb{R}$ dans $\mathbb{R}$. On a donc un polynôme de degré $K-1$.
-	\[P(k)=\frac{\prod_{i=1}^{K-1}(k+i)}{K!}\]
-	
-	
-	\noindent Étudions la fonction $h(x)=(f(x))^{\frac{1}{x-1}}$ où f est strictement positive, on peut la réecrire
-	\[h(x)=\text{exp}(\frac{ln(f(x))}{x-1}) \]
-	Une étude de signe donne à nous intéresser au signe de l'expression
-	\[(x-1)f'(x)-f(x)ln(f(x)) \tag{1}\] 
-	qui détermine le signe de la dérivée de h. On regarde donc l'expression 
-	\[(k-1)P'(k)-P(k)log(P(k))=P(k)\Big[\big(\sum_{i=1}^{K-1}\frac{k-1}{k+i}\big)-log(P(k))\Big]\]
-	Avec une comparaison série integralle, $\sum_{i=1}^{K-1}\frac{k-1}{k+i} \leq $ par et minore $P(k)$ par $\frac{k^{K-1}}{K!}$ On est sûr que la série est décroissante lorsque 
-	\[K-1-ln\big(\frac{k^{K-1}}{K!}\big)<0 \Longleftrightarrow e^{1}K!^{\frac{1}{K-1}}< k\]
-	On a finalement 
-	\[\gamma(f,z)=max_{k=2}^{\lceil e^{1}K!^{\frac{1}{K-1}} \rceil}\left\|f'(z)^{-1}\frac{f^{(k)}(z)}{k!}\right\| \]
-	\end{demonstration}
+	\[\frac{P(z)}{Q(z)}\unlhd \frac{M_0M_1}{(1-\alpha z)^{m}}.\]
+	Nous n'irons pas plus loins dans l'explication de l'obtention des bornes, mais la démonstration et l'obtention des coefficients sont détaillés dans le rapport de Thomas Grégoire.
+	\newpage
 
 	\section{Les méthodes d'exclusion de zéros}
 	\begin{definition} Soit f une fonction analytique en x, alors on peut écrire $f(x+t)=\sum_{k \geq 0} \frac{f^{(k)}(x)}{k!}t^{k}$, Le reste de la série à l'ordre k est 
 		\[R^{k}(f,x)(t)=\sum_{i \geq k} \frac{f^{(i)}(x)}{i!}t^{i}\]
 		et la série majorante de ce reste
-		\[M^{i}(f,x)(t) \unrhd R^{i}(f,x)(t)\]
+		\[M^{i}(f,x)(t) \unrhd R^{i}(f,x)(t).\]
 	\end{definition}
+	Dans cette partie nous utiliserons aussi la notation $[t^k]f(t)=u_k$, où f est une série entière $f(t)=\sum_{k\geq0}u_kt^k$.
 	\subsection{L'algorithme de Bissection-exclusion de J.-C. Yakoubsohn}
 	
-	Cette partie a pour objectif de proposer un algorithme permettant d'exclure des intervalles dans lesquels on peut certifier qu'il n'y a pas de zéro. Une méthode à été proposée dans le plan complexe par J.-C. Yakoubsohn, nous réutiliserons la fonction introduite dans son article (faire une bib).
+	Cette partie a pour objectif de proposer un algorithme permettant d'exclure des intervalles dans lesquels on peut certifier qu'il n'y a pas de zéro. Une méthode à été proposée dans $\mathbb{C}$ par J.-C. Yakoubsohn \cite{DBLP:journals/jc/Yakoubsohn05}, nous réutiliserons la fonction introduite dans son article.
 	
 	\begin{definition}Soit f une fonction analytique en x, alors pour t suffisamment petit\\ $f(x+t)=\sum_{k\geq0} \frac{f^{(k)}(x)}{k!}t^{k}$. On définit $M(f,x)(t)=|f(x)|-\sum_{k\geq1}|\frac{f^{(k)}(x)}{k!}|t^{k}$
 	\end{definition}
@@ -612,10 +571,9 @@
 		On définit la fonction $m(x)$ comme l'unique point sur $\mathbb{R}_+$ tel que $M(f,x)(m(x))=0$.
 	\end{definition} 
 	On peut assurer que $f$ ne s'annule pas sur l'intervalle $]x-m(x),x+m(x)[$.
-	\vspace{7mm}
-	On voit que la partie négative de $M(f,x)$ peut être remplaçée par n'importe quelle série majorante et encore respecter ces propriétés. C'est ce que nous ferons concrêtement sur ordinateur.\\
+	La partie négative de $M(f,x)$ peut être remplaçée par n'importe quelle série majorante et encore respecter ces propriétés. C'est ce que nous ferons concrêtement sur ordinateur.\\
 	\\
-	Plus généralement les fonctions de la forme \[M(f,x)(t)=\big|f(x)+tf'(x)+...+t^{k-1}f^{(k-1)}(x)\big|-M_f^{k}(t)\] où $M_f^{k}$ la série  majorante du reste à l'orde k, vérifient encore les propriétés énoncées précèdement.\\
+	Plus généralement les fonctions de la forme \[M(f,x)(t)=\big|f(x)+tf'(x)+...+t^{k-1}f^{(k-1)}(x)\big|-M^{k}(f,x)(t)\] où $M^{k}(f,x)$ est la série  majorante du reste à l'orde k en x, vérifie encore les propriétés énoncées précèdement.\\
 	
 	\noindent L'algorithme suivant donnera une itération de l'algorithme de bissection-exclusion 
 	
@@ -640,15 +598,28 @@
 	
 	\noindent Ici, on n'a qu'une étape de l'algorithme et l'idée sera bien sûr d'appliquer récursivement cette fonction pour avoir des intervalles de plus en plus précis. L'article de Yakoubsohn donne une discussion plus complète sur la taille des intervalles en fonctions des "clusters" de zéros.\\
 
-	\subsubsection{Étude de la convergence de la fonction bissection exclusion}
+	\subsection{Étude de la convergence de la fonction bissection exclusion}
 	On a ici une méthode pour exclure des intervalles, mais peut-on en exclure à une précision arbitraire du zéro? Si oui, alors on pourra se rapprocher suffisament des zéros pour les absorber, c'est ce que nous verrons dans la partie suivante.\\
-	Il est démontré que la fonction $m$ est continue dans l'article de Yakoucsohn (à citer). 
+	Il est démontré que la fonction $m$ est continue dans l'article de Yakoucsohn. 
 	D'ailleurs, la décroissance de $M(f,x)$ implique que pour tout $a$ tel que $a<m(x)$, $M(f,x)(a)>0$.\\
-	On s'intéresse maintenant à la fonction $M(f,x)$ introduite précèdement, et lorsqu'elle s'annule. C'est important de savoir si les itérations successives de cette méthode permettrons de s'approcher aussi proche du zéro que l'on veut.
-	
+	On s'intéresse maintenant à la fonction $M(f,x)$ introduite précèdement, et lorsqu'elle s'annule. C'est important de savoir si les itérations successives de cette méthode permettrons de s'approcher aussi proche du zéro que l'on veut.\\
+	\\
+	\subsubsection{convergence vers un zéro}
+	On va ici démontrer que la fonction permet de se rapprocher aussi proche que l'on veut d'un zéro.
+	Il va falloir introduire plusieurs concepts, soit $[a,b]$  le segement sur lequel on travaille, $S_0$ sa longueure.
+	On suppose que l'intervalle contient $d$ zéros $z_1,...,z_d$ de $f$ comptés avec leur multiplicité alors on peut écrire
+	\[f(z)=\prod_{i=1}^{d}(z-z_i)h(z)\]
+	où $h(z)$ est une fonction analytique.
+		
+		(1)$\forall z \in S_0, \hspace{3mm} \frac{|h^{(k)}(z)|}{k!|h(x)|}\leq \lambda \tau^{k-1}$
+		
+		(2)2$\tau S_0 \geq \frac{1}{2}$
+		
+	\subsubsection{Comportement local proche d'un zéro}
+	S'intéresse maintenant au comportement locale, proche d'un zéro de cette fonction.
 	\begin{theorem}
 		Soient f une fonction analytique telle que $f'(x)\neq 0$, et $m(x)$ tel que $M(f,x)(m(x))=0$, alors
-		\[m(x)\geq\frac{\beta(f,x)}{\beta(f,x)\gamma(f,x)+1}\]
+		\[\beta(f,x) \geq m(x)\geq\frac{\beta(f,x)}{\beta(f,x)\gamma(f,x)+1}\]
 	\end{theorem}
 	\begin{demonstration}
 	
@@ -667,27 +638,28 @@
 	\vspace{7mm}
 	Remarquons que $\gamma$ est une fonction continue donc bornée sur $[a,b]$ (si $f'$ ne s'annule pas sur $[a,b]$) appellons $sup\gamma(f)$ son sup sur l'intervalle étudié. On a donc toujours
 	\[m(x)\geq\frac{\beta(f,x)}{\beta(f,x)sup\gamma(f)+1}.\]
-    Cette démonstration se généralise à n'importe quelle série majorante et, si l'on conserve le premier terme $|f'(x)|$ alors le résultat est le même en remplaçant $\gamma(f,x)$ par $\gamma(|M^1(f,x),x)$. Dans la suite, utiliserons $sup\gamma(M)$, pour montrer que ce résultat est encore vrai pour n'importe quelles séries majorantes telles que 
-    \[\sup\gamma(M)=\sup_{x\in[a,b]}\gamma(M^1(f,x)) \]
-    soit défini et $[t^1]M^1(f,x)=|f'(x)|$.
+    Cette démonstration se généralise à n'importe quelle série majorante et, si l'on conserve le premier terme $|f'(x)|$ dans la série majorante, alors le résultat sera le même en remplaçant $\gamma(f,x)$ par $\gamma(|M^1(f,x),x)$. Dans la suite, nous utiliserons $sup\gamma(M)$, pour montrer que ce résultat est encore vrai pour n'importe quelles séries majorantes telles que 
+    \[\sup\gamma(M)=\sup_{x\in[a,b]}\gamma(M^1(f,x),x) \]
+    soit défini et $[t^1]M^1(f,x)(t)=|f'(x)|$.
     \\
     Étudions alors la suite $x_k$ vérifiant 
     \begin{equation}
     x_{k+1}=
     \begin{array}{ccc}
-    x_k+\frac{\beta(f,x_k)}{\beta(f,x_k)sup\gamma(M)+1} & \mbox{si} & f'(x)\neq 0\\
+    x_k+\frac{\beta(f,x_k)}{\beta(f,x_k)sup\gamma(M^1)+1} & \mbox{si} & f'(x)\neq 0\\
     \end{array}
     \end{equation}
-    Nous étudierons la convergence de cette suite. 
+    Nous étudierons la convergence de cette suite. On voit clairement que lorsque $\beta(f,x_k)sup\gamma(M^1) \geq 1$, cette suite converge quadratiquement.
+	
 	
 	
 	\section{Séparation des zéros via la méthode de Rouché}
-	Nous allons ici nous intéresser au moyen de certifier nos zéros. On sait que les zéros des fonctions analytiques sont isolés, mais on cherche ici évaluer concrètement la distance entre deux zéros. Cela a été fait dans le livre de Dedieu et ici nous chercherons à adapter les démonstrations appliquées à gamma, aux séries majorantes.
+	Nous allons ici nous intéresser au moyen de certifier nos zéros. On sait que les zéros des fonctions analytiques sont isolés, mais on cherche ici évaluer concrètement la distance entre deux zéros. Cela a été fait dans le livre de Dedieu et ici nous chercherons à adapter les démonstrations de la théorie alpha de Smale aux séries majorantes.
 	
 	\begin{definition} Soient $\mathbb{E}$ et $\mathbb{F}$ des espaces de Banach et 
 		Soit $f:\mathbb{E}\rightarrow \mathbb{F}$ une fonction analytique, notons $\zeta$ un point de $\mathbb{E}$ tel que $f(\zeta)=0$, alors on note
 		\begin{equation}
-		 sep(f,\zeta)=\inf_{f(\zeta '=0, \hspace{1mm} \zeta \neq \zeta ')}\left\|\zeta-\zeta '\right\|
+		 sep(f,\zeta)=\inf_{f(\zeta ')=0, \hspace{0.5mm} \zeta \neq \zeta '}\left\|\zeta-\zeta '\right\|
 		\end{equation}
 		
 	\end{definition}
@@ -701,7 +673,7 @@
 	
 	\subsection{De la théorie alpha de Smale aux séries majorantes}
 	
-	La suite sera une adaptation de la théorie alpha de Smale aux séries majorantes, l'objectif de cettte partie est de fournir des résultats plus généraux que la théorie de gamma pour n'importe quelle série majorante. L'inconvénient c'est que les conditions "légères" de la théorie alpha seront remplacés par des conditions plus "lourdes". \\
+	La suite sera une adaptation de la théorie alpha de Smale aux séries majorantes, l'objectif de cettte partie est de fournir des résultats plus généraux que la théorie de gamma pour n'importe quelle série majorante. L'inconvénient c'est que les conditions "légères" de la théorie alpha seront remplacés par des conditions plus "lourdes". \cite{dedieu2006points}\\
 	Nous aurons besoin d'introduire des notations pour parler de la série majorante sur le reste d'une série à l'ordre k.
 	
 	
@@ -739,17 +711,21 @@
 	\begin{demonstration}Raisonnons par l'absurde, 
 	\[f(\zeta ')=f(\zeta)+(\zeta '-\zeta)f'(\zeta)+ \sum_{k \geq 2}\frac{f^{(k)}(\zeta)}{k!}(\zeta'-\zeta)^k\]
 	qui se réecrit, en multipliant par $f'(\zeta ')^{-1}$
-	\[(\zeta-\zeta')=f'(\zeta)^{-1} \sum_{k \geq 2}\frac{f^{(k)}(\zeta)}{k!}(\zeta'-\zeta)^k]\]
+	\[(\zeta-\zeta')=f'(\zeta)^{-1} \sum_{k \geq 2}\frac{f^{(k)}(\zeta)}{k!}(\zeta'-\zeta)^k\]
 	d'où 
 	\[1 \leq |f'(\zeta)^{-1}|\sum_{k \geq 2}  \big|\frac{f^{(k)}(\zeta)}{k!}(\zeta'-\zeta)^{k-1} \big|\leq |f'(\zeta)^{-1}| \frac{M^{2}(f,\zeta)(|\zeta-\zeta'|)}{|\zeta-\zeta'|}\]
 	\[1 \]
 	Or $|\zeta-\zeta'|<S\Big(|f'(\zeta)^{-1}|\frac{M^{2}(f,\zeta)(t)}{t}\Big)=\mathbb{S}_{f}(\zeta)$ la fonction majorante est croisssante alors $1<1$, c'est absurde. Il n'y a donc  pas de zéro autre que $\zeta$  dans l'intervalle $[\zeta-\mathbb{S}_{f}(\zeta),\zeta+\mathbb{S}_{f}(\zeta)]$
 	\end{demonstration} 
-	\noindent Remarque, si la fonction majorante $M^{2}(f,\zeta)$ est $o(t)$ en zéro alors $\mathbb{S}_{f}(\zeta)>0$. Ça sera le cas des séries majorantes que nous utiliserons.
+	\vspace{7mm}
+	\noindent Une autre façon de le voir est de développer f en $\zeta$
+	\[f(\zeta +t)=0+t\Big(f'(\zeta)+\frac{R^{2}(f,\zeta)(t)}{t}\Big), \]
+	si l'on veut pour que ça reste de signe constant on veut donc $|f'(\zeta)|-\frac{M^{2}(f,\zeta)(t)}{t} >0$ ce qui mène à la même conclusion.\\
+	Remarque, cette démonstration montre que les zéros sont isolés et borne aussi la distance. Pour un zéro $\zeta$ de multiplicité supérieure, disons m, l'astuce est la même, et $sep(f,\zeta) \geq S\big(\big|\frac{f^{(m)}(\zeta)}{m!}\big|^{-1}\frac{M^{m+1}(f,\zeta)(t)|}{t^{m}}\big)$.
 	\subsubsection{Quantification de la distance au zéro}
-	
+	Dans cette partie comme dans la précèdente, toutes les séries majorantes vérifient la propriété $[t^1]M^{1}(f,x)(t)=|f'(x)|$.
 	\begin{theorem} Soit $f:\mathbb{C} \rightarrow \mathbb{C}$ une fonction analytique, soit $x_0 \in \mathbb{C}$ tel que $f'(x_0) \neq 0$. Alors, quel que soit $r\in [0,\mathbb{S}_{f}(x_0)]$ vérifiant
-	\[r-|f'(x_0)^{-1}|\frac{M^{2}(f,x_0)(r)}{r}>\beta(f,x_0),\]
+	\[\beta(f,x)(1-r\gamma(M^1(f,x))<r,\]
 	il existe un unique zéro pour f sur $B(x_0,r)$ la boule ouverte centrée en $x_0$ de rayon $r$. 
 	\end{theorem}
 	 Nous montrerons que dans le cas où f est à coefficients réels que $]x_0-r,x_0+r[$ contient un unique zéro. Ce qui vient du fait qu'une racine complexe admet aussi son conjugué comme racine, or la boule trouvée est centrée sur un point de l'axe des réels, donc il devrait y avoir 2 zéros et non pas 1 dans la boule.
@@ -760,10 +736,9 @@
 	\begin{demonstration}
 	
 	Définissons $g(x)=f(x)-f(x_0)$, $g(x_0)=0$, $g'(x_0)=f'(x_0)$ d'après le théorème précèdent, $x_0$ est le seul zéro de g dans la boule
-	$B(x_0,\mathbb{S}_{f}(x_0))$
-	La série de Taylor de g est convergente, elle est donnée par
+	$B(x_0,\mathbb{S}_{f}(x_0))$. La série de Taylor de g est convergente, elle est donnée par
 	\[g(x)=f'(x_0)(x-x_0)+ \sum_{k \geq 2}\frac{f^{(k)}(x_0)}{k!}(x-x_0)^k\]
-	Nous allons prouver que pour $0<r<\mathbb{S}_{f}(x_0)$ on a,
+	Nous allons prouver que si pour r vérifiant $0<r<\mathbb{S}_{f}(x_0)$ on a,
 	\[|f'(x_0)^{-1}f(x)-f'(x_0)^{-1}g(x)|=|f'(x_0)^{-1}f(x_0)|<|f'(x_0)^{-1}g(x)|\]
 	\\
 	Pour tout $x$ avec $|x-x_0|=r$
@@ -771,26 +746,56 @@
 	Par le théorème de Rouché $|f'(x_0)^{-1}|f$ et $|f'(x_0)^{-1}|g$ auront le même nombre de zéros dans cette boule. Remarquons que 
 	\[|f'(x_0)^{-1}f(x)-f'(x_0)^{-1}g(x)|=|f'(x_0)^{-1}f(x_0)|=\beta(f,x_0)\]
 	Aussi
-	\[x-x_0=f'(x_0)^{-1}g(x)-f'(x_0)^{-1}\sum_{k \geq 2}\frac{f^{(k)}(x_0)}{k!}(x-x_0)^k\]
+	\[x-x_0=f'(x_0)^{-1}g(x)-f'(x_0)^{-1}\sum_{k \geq 2}\frac{f^{(k)}(x_0)}{k!}(x-x_0)^k,\]
 	de sorte que
-	\[r \leq |f'(x_0)^{-1}g(x)|+f'(x_0)^{-1}M^{2}(f,x_0)(r) \]
+	\[r \leq |f'(x_0)^{-1}g(x)|+|f'(x_0)|^{-1}M^{2}(f,x_0)(r) .\]
 	C'est à dire que l'hypothèse de Rouché est satisfaite si
-	\[\beta(f,x_0)<r-f'(x_0)^{-1}M^{2}(f,x_0)(r)\] 
-	Ce sera cette expression qui permettra d'exclure des intervalles. Pour commencer on peut dire que si 
-	\[\beta(f,x_0)< \sup_{r \in [0,\mathbb{S}_{f}(x_0)]}\{r-f'(x_0)^{-1}M^{2}(f,x_0)(r)\}\]
-	alors, pour tout r tel que l'inégalité  $\beta(f,x_0)<r-f'(x_0)^{-1}M^{2}(f,x_0)(r)$ soit satisfaite, on peut assurer avec le théorème de Rouché qu'il n'existe qu'un seul zéro dans la boule $B(x_0,r)$.
+	\[\beta(f,x_0)<r-|f'(x_0)|^{-1}M^{2}(f,x_0)(r)\] 
+	Qu'on peut encore réecrire en utilisant la définition de $\gamma$
+	\[\beta(f,x_0)< \frac{r}{1 -\gamma(M^1(f,x),x)r}\]
 	
 	\end{demonstration}
-	\vspace{7mm}
-	\noindent Remarque, on peut maximiser la taille de l'intervalle à ajouter à $\mathbb{A}_1$. En effet il suffit de prendre le supremum sur les r vérifiant
-	\[\beta(f,x_0)< r-|f'(x_0)^{-1}|\frac{M^{2}(f,x_0)(r)}{r}.\]
+	Ce sera cette expression qui permettra d'exclure des intervalles. Et de façon générale on fera le calcule dans l'autre sens, on regardera le plus petit r vérifiant l'inégalité et si ce r vérifie la condition $|f'(x_0)^{-1}|\frac{M^{2}(f,\zeta)(r)}{r}\leq 1$, alors on exclura l'intervalle $[x_0-r,x_0+r]$ assurant qu'il y a un unique zéro dans cet intervalle.
 
+	\subsection{Détermination du coefficient de $\gamma(M^1(f,z),z)$}
+	Nous avons vu que nous devrons souvent déterminer le coefficient $\gamma(M^1(f,z),z)$ dans notre algorithme, nous allons trouver une façon rapide de le calculer.
+	La fonction de majoration de $R^1(f,z)$ renvoyée est donc de la  forme
+	\[h(z)=t|f'(z)|+t^2\frac{A}{(1-\alpha z)^{\lambda}}\]
+	Avec $f'(z)\neq 0$. On rappelle la formule $\gamma(f,z)=max_{k=2}^{N}\left\|f'(z)^{-1}\frac{f^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}$. 
+	On s'intéresse donc à la fonction $g(z)=\frac{A}{(1-\alpha z)^{\lambda}}$, la multiplication par $t^2$ ne fait que décaler les indices des coefficients, on aura donc la formule suivante
+	\[\gamma(M^1(f,z),z)=\sup_{k\geq0}\Big|f'(z)^{-1}\frac{g^{(k)}(z)}{k!}\Big|^{\frac{1}{k+1}}\]
+	\begin{theorem}
+		\[\gamma(M^1(f,z),z)=\max_{k=0}^{\lambda}\Big|f'(z)^{-1}\frac{g^{(k)}(z)}{k!}\Big|^{\frac{1}{k+1}}\]
+	\end{theorem}
 	
-	\section{Taille minimale des intervalles ajoutés à $\mathbb{A}_1$}
-	
+	\begin{demonstration}
+		\noindent Nous nous placerons dans le cas $k\geq 1$, en étudiant l'expression de la fonction de majoration, en rentrant $|f'(z)|^{-1}$ dans la constante $A$. 
+		\[|f'(z)|^{-1}\frac{g^{(k)}}{k!}(z)=\frac{A\alpha^{k}}{(1-\alpha z)^{\lambda+k}}\frac{\lambda^{\uparrow k-1}}{k!}\]
+		Où $\lambda^{\uparrow k}=\prod_{i=0}^{k-1}(\lambda+i)$, On peut encore écrire,
+		\[|f'(z)|^{-1}\frac{g^{(k)}(z)}{k!}=\frac{A\alpha^{k}}{(1-\alpha z)^{\lambda+k}} \binom{\lambda+k-1}{k}\]
+		On a finalement, pour $z < \alpha$,
+		\[\left\|f'(z)^{-1}\frac{g^{(k)}(z)}{k!}\right\|^{\frac{1}{k+1}}= \frac{\alpha}{1-\alpha z} \left\|\frac{A}{\alpha(1-\alpha z)^{\lambda-1}}\binom{\lambda+k-1}{k}\right\|^{\frac{1}{k+1}} \tag{*}\]
+		Considérons cette expression comme une fonction de $\mathbb{R}$ dans $\mathbb{R}$. On pose $K=\frac{A}{\alpha(1-\alpha z)^{\lambda-1}}$
+		\[Q(k)=\frac{K\prod_{i=0}^{k-1}(\lambda+i)}{k!} \text{   bof...}\]
+		\\
+		\\
+		La démonstration reste à terminer...
+		\\
+		\\
+		\noindent Étudions la fonction $h(x)=f(x)^{\frac{1}{x+1}}$ où f est strictement positive, on peut la réecrire
+		\[h(x)=\text{exp}(\frac{\log f(x)}{x+1}) \]
+		Une étude de signe donne à nous intéresser au signe de l'expression
+		\[(x+1)f'(x)-f(x)\log f(x) \tag{1}\] 
+		qui détermine le signe de la dérivée de h. On regarde donc l'expression 
+		\[(k-1)P'(k)-P(k)log(P(k))=P(k)\Big[\big(\sum_{i=1}^{K-1}\frac{k-1}{k+i}\big)-log(P(k))\Big]\]
+		Avec une comparaison série integralle, $\sum_{i=1}^{K-1}\frac{k-1}{k+i} \leq $ par et minore $P(k)$ par $\frac{k^{K-1}}{K!}$ On est sûr que la série est décroissante lorsque 
+		\[K-1-ln\big(\frac{k^{K-1}}{K!}\big)<0 \Longleftrightarrow e^{1}K!^{\frac{1}{K-1}}< k\]
+		On a finalement 
+		\[\gamma(f,z)=max_{k=2}^{\lceil e^{1}K!^{\frac{1}{K-1}} \rceil}\left\|f'(z)^{-1}\frac{f^{(k)}(z)}{k!}\right\| \]
+	\end{demonstration}
 
-	
-	\subsection{}
+	\bibliography{mabib}
+	\bibliographystyle{plain}
 	
 	
 \end{document}
